; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/hda/extr_hda_generic.c_snd_hda_gen_spec_free.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/hda/extr_hda_generic.c_snd_hda_gen_spec_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hda_gen_spec = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hda_gen_spec*)* @snd_hda_gen_spec_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_hda_gen_spec_free(%struct.hda_gen_spec* %0) #0 {
  %2 = alloca %struct.hda_gen_spec*, align 8
  store %struct.hda_gen_spec* %0, %struct.hda_gen_spec** %2, align 8
  %3 = load %struct.hda_gen_spec*, %struct.hda_gen_spec** %2, align 8
  %4 = icmp ne %struct.hda_gen_spec* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %15

6:                                                ; preds = %1
  %7 = load %struct.hda_gen_spec*, %struct.hda_gen_spec** %2, align 8
  %8 = call i32 @free_kctls(%struct.hda_gen_spec* %7)
  %9 = load %struct.hda_gen_spec*, %struct.hda_gen_spec** %2, align 8
  %10 = getelementptr inbounds %struct.hda_gen_spec, %struct.hda_gen_spec* %9, i32 0, i32 1
  %11 = call i32 @snd_array_free(i32* %10)
  %12 = load %struct.hda_gen_spec*, %struct.hda_gen_spec** %2, align 8
  %13 = getelementptr inbounds %struct.hda_gen_spec, %struct.hda_gen_spec* %12, i32 0, i32 0
  %14 = call i32 @snd_array_free(i32* %13)
  br label %15

15:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @free_kctls(%struct.hda_gen_spec*) #1

declare dso_local i32 @snd_array_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
